<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SleepTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="clear_button">Clear User Data</string>
    <string name="settings_button">Set User Data</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="calibrate_button">Calibrate</string>
    
    
    <string name="project_description"></string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_calibrate">CalibrateActivity</string>
    
    <string name="age_text">Age:</string>
    <string name="gender_text">Gender:</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="weight_text">Weight:</string>
    <string name="height_text">Height:</string>
    
    <string name="ok_text">OK</string>
    
    <string name="user_data_text">UserData:</string>
    <string name="current_user_data_text">empty</string>

</resources>
