<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="272dp"
            android:layout_height="80dp"
            android:layout_marginTop="33dp"
            android:text="@string/project_description" />
        
    </ScrollView>

    <Button
        android:id="@+id/button_setUserData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button1"
        android:text="@string/settings_button"
        android:src="@android:drawable/ic_menu_preferences" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignTop="@+id/button_setUserData"
        android:text="@string/clear_button" />

    <TextView
        android:id="@+id/currentUserData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scrollView1"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/scrollView1"
        android:layout_below="@+id/textView2"
        android:text="@string/current_user_data_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_below="@+id/button_clear"
        android:layout_marginTop="56dp"
        android:text="@string/user_data_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignRight="@+id/scrollView1"
        android:layout_alignTop="@+id/scrollView1"
        android:text="@string/start_button" />
    
</RelativeLayout>
