<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="12dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/weight_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/weightTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >
            
                <requestFocus />
                
            </EditText>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:text="@string/height_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/heightTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="27dp"
		        android:text="@string/age_text"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

		    <EditText
		        android:id="@+id/ageTextEdit"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="number" />
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="26dp"
		        android:text="@string/gender_text"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
			
			<RadioGroup 
			    android:id="@+id/radioGender"
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    >
			    <RadioButton
			        android:id="@+id/radioButton1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/male_text" />
			
			    <RadioButton
			        android:id="@+id/radioButton2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/female_text" />
			</RadioGroup>
			
		    <Button
		        android:id="@+id/button1"
		        android:layout_width="169dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="36dp"
		        android:text="@string/ok_text" />
	            
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
